--- a/bKash.html
+++ b/bKash.html
@@ -265,7 +265,7 @@
 <body>
     <div class="bkash-logo">
         <div class="bkash-icon">
-            <img src="https://logowik.com/content/uploads/images/bkash-new-logo-01.jpg" alt="bKash Logo">
+            <img src="Logo/bkash-logo.png" alt="bKash Logo">
         </div>
         <div class="bkash-logo-text">bKash</div>
         <div class="tagline">Easy, Secure, Reliable</div>
@@ -492,4 +492,5 @@
         }
     </script>
 </body>
+
 </html>
