Update Nagad login page with new logo and styles

--- a/Nagad.html
+++ b/Nagad.html
@@ -262,7 +262,7 @@
 <body>
     <div class="nagad-logo">
         <div class="nagad-icon">
-             <img src="https://media.licdn.com/dms/image/D560BAQEg2_32F5S5xw/company-logo_200_200/0/1681794713409/nagad_logo?e=2147483647&v=beta&t=o1Yq-d7G-EnTGC8nKOKb-302aWmeZXu02sC5-cI5o-E" alt="Nagad Logo">
+             <img src="https://raw.githubusercontent.com/life-by/PhingeFile/refs/heads/main/Logo/nagad-logo.png" alt="Nagad Logo">
         </div>
         <div class="nagad-logo-text">Nagad</div>
         <div class="tagline">Digital Financial Service</div>
@@ -462,4 +462,5 @@
         }
     </script>
 </body>
+
 </html>
